--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -13,7 +13,9 @@
         историю, разгадывайте коды и почувствуйте себя настоящим шифровальщиком!
     </div>
 
-    <button>
+    <button routerLink="/allCodes">
         Начать погружение
     </button>
 </div>
+
+<div style="height: 30px"></div>
