--- a/src/app/components/code-three/code-three.component.html
+++ b/src/app/components/code-three/code-three.component.html
@@ -5,32 +5,28 @@
     </div>
 
     <div style="display: block; padding-top: 180px" class="nameCode">
-        <p>стегано</p><p>графия</p>
+        <p>шифр</p><p>атбаш</p>
     </div>
 </header>
 
 <div class="main">
     <div class="description">
-        Стеганография — это метод скрытой передачи информации путем встраивания данных в другой носитель без видимых изменений.
+        Атбаш — это древний моноалфавитный шифр подстановки, где первая буква алфавита заменяется на последнюю, вторая — на предпоследнюю и так далее.
     </div>
 
     <div style="margin-top: 25px" class="description">
-        Принцип работы стеганографии при встраивании информации в текст заключается в скрытии данных внутри текстового файла так, чтобы изменения оставались незаметными для человека. Это достигается за счет использования различных техник, которые не влияют на читаемость текста, но позволяют передать скрытую информацию.
+        Этот метод восходит к библейским временам — его использовали ещё древние евреи для зашифровывания слова "Вавилон" в Книге Иеремии, а название "Атбаш" образовано от сочетания первых (Алеф-Тав) и последних (Бет-Шин) букв еврейского алфавита.
     </div>
 
     <div class="task" style="margin-top: 45px">
-        <p class="title-mini">Задание: <span class="description-mini">Найдите скрытое сообщение внутри текста</span></p>
+        <p class="title-mini">Задание: <span class="description-mini">Расшифруйте высказывание И.В. Сталина</span></p>
     </div>
 
     <div class="task" style="margin-top: 10px">
-        <p class="title-mini">Ключ: <span> 3</span></p>
+        <p class="title-mini">Текст: <span class="description-mini">Сяыр юдмг рзъсг нтъудт зъурэъфрт, змрюд юдмг молнрт э Фоянсрх Яотцц.</span></p>
     </div>
 
-    <div class="task" style="margin-top: 10px">
-        <p class="title-mini">Текст: <span class="description-mini">Хвйзос е цъзрлл - озёнс е дсб</span></p>
-    </div>
-
-    <img style="margin-top: 37px" src="./assets/alphavit.svg" alt="">
+    <img style="margin-top: 37px" src="./assets/atbash.svg" alt="">
 
     <p style="font-size: 17px; margin-top: 37px">Введите расшифрованное высказывание</p>
 
