Доработки для корректной сборки

--- a/src/app/components/code-two/code-two.component.html
+++ b/src/app/components/code-two/code-two.component.html
@@ -20,7 +20,7 @@
 
     <div class="task" style="margin-top: 45px">
         <p class="title-mini">Задание:
-            <span class="description-mini">Расшифруйте один из знаменитых лозунгов Великой Отечественной фойны </span>
+            <span class="description-mini">Расшифруйте один из знаменитых лозунгов Великой Отечественной Войны</span>
         </p>
     </div>
 
